# gwork

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
contrib/: gw.bash  gw.zsh  gwork.bash  gwork.zsh
docs/: worktrees.md
src/gw/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
